# DE_Neobank_Frontend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
de_neobank_frontend/: README.md  app.py  pyproject.toml
llm/: main copy 2.py  main copy.py  main.py  main_agent.py  main_chain.py  main_deprioritized.py
neobank_gold/: app.py
