[tool.poetry]
name = "de-neobank-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Halenke <ahalenke@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
google-cloud-bigquery = "^3.19.0"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
