[tool.poetry]
name = "de-neobank-frontend"
version = "0.1.0"
description = ""
authors = ["Alexander Halenke <ahalenke@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.14"
google-cloud-bigquery = "^3.19.0"
streamlit = "^1.32.2"
langchain = "^0.1.14"
langchain-community = "^0.0.30"
langchain-openai = "^0.1.1"
sqlalchemy-bigquery = "^1.10.0"
openai = "^1.14.3"
chromadb = "^0.4.24"
tiktoken = "^0.6.0"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.29"
langchain-experimental = "^0.0.56"
plotly-express = "^0.4.1"
plotly = "^5.20.0"
google-cloud-bigquery-storage = "^2.24.0"
faiss-gpu = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
